--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <script src="node_modules/angular/angular.js"></script>
   <script src="node_modules/auth0-angular/build/auth0-angular.js"></script>
   <script src="https://cdn.auth0.com/js/lock-9.0.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
   <script src="node_modules/angular-animate/angular-animate.js"></script>
   <script src="node_modules/angular-aria/angular-aria.js"></script>
   <script src="node_modules/angular-material/angular-material.js"></script>
@@ -34,7 +33,10 @@
   <script src="public/components/controllers/home1.js"></script>
   <script src="public/services/questions.js"></script>
   <script src="public/services/userService.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+  <script src="public/services/socket.service.js"></script>
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>-->
+  <script src="node_modules/angular-socket-io/socket.min.js"></script>
+  <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
   <script src="public/services/chatService.js"></script>
   <script src="public/components/controllers/chatPage.js"></script>
 </head>
