(ADD) Redoes the sockets/chat page. Still need to make channels and persist data

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <script src="node_modules/angular-material/angular-material.js"></script>
   <script src="node_modules/angular-jwt/dist/angular-jwt.js"></script>
   <script src="node_modules/angular-storage/dist/angular-storage.js"></script>
-  <script src="node_modules/@uirouter/angularjs/release/angular-ui-router.js"></script>
+  <!--<script src="node_modules/@uirouter/angularjs/release/angular-ui-router.js"></script>-->
+  <script src="//unpkg.com/angular-ui-router@1.0.0-rc.1/release/angular-ui-router.js"></script>
   <script src="public/app.js"></script>
   <script src="public/config/auth.config.js"></script>
   <script src="public/config.js"></script>
@@ -31,11 +32,21 @@
   <script src="public/components/controllers/profilePage.js"></script>
   <script src="public/components/controllers/home.js"></script>
   <script src="public/components/controllers/home1.js"></script>
+  <script src="public/components/chat/message/message.js"></script>
+  <script src="public/components/chat/message/message.ctrl.js"></script>
+  <script src="public/components/chat/messageForm/messageForm.ctrl.js"></script>
+  <script src="public/components/chat/messageForm/messageForm.js"></script>
+  <script src="public/components/chat/messageList/messageList.js"></script>
+  <script src="public/components/chat/messageList/messageList.ctrl.js"></script>
+  <script src="public/components/chat/participantList/participantList.js"></script>
+  <script src="public/components/chat/participantList/participantList.ctrl.js"></script>
+  <script src="public/components/chat/state/chat.ctrl.js"></script>
+  <script src="public/components/chat/state/chat.js"></script>
   <script src="public/services/questions.js"></script>
   <script src="public/services/userService.js"></script>
   <script src="public/services/socket.service.js"></script>
   <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>-->
-  <script src="node_modules/angular-socket-io/socket.min.js"></script>
+  <script src="public/utils/custom-socket-wrapper.js"></script>
   <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
   <script src="public/services/chatService.js"></script>
   <script src="public/components/controllers/chatPage.js"></script>
