--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Slack Overflow</title>
-  <link href="node_modules/angular-material/angular-material.css" rel="stylesheet" >
+  <script type='text/javascript' src='https://api.stackexchange.com/js/2.0/all.js'></script>
+  <link href="node_modules/angular-material/angular-material.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link href="public/styles.css" rel="stylesheet">
   <script src="node_modules/angular/angular.js"></script>
@@ -19,8 +21,9 @@
   <script src="node_modules/angular-storage/dist/angular-storage.js"></script>
   <script src="node_modules/@uirouter/angularjs/release/angular-ui-router.js"></script>
   <script src="public/app.js"></script>
-  <script src="public/config/auth.config.js"></script>
   <script src="public/config.js"></script>
+  <script src="public/config/auth.config.js"></script>
+  <script src="public/config/stack.config.js"></script>
   <script src="public/services/auth.service.js"></script>
   <script src="public/components/controllers/profile.js"></script>
   <script src="public/components/controllers/toolbar.js"></script>
@@ -38,10 +41,12 @@
   <script src="public/services/chatService.js"></script>
   <script src="public/components/controllers/chatPage.js"></script>
 </head>
+
 <body>
   <div ng-app="slackOverflowApp">
     <toolbar></toolbar>
-       <ui-view></ui-view>
-    </div>
+    <ui-view></ui-view>
+  </div>
 </body>
+
 </html>
