--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script src="public/app.js"></script>
   <script src="public/config.js"></script>
   <script src="public/config/auth.config.js"></script>
-  <script src="public/config/stack.config.js"></script>
+  <script src="public/config/stackConfig.js"></script>
   <script src="public/services/auth.service.js"></script>
   <script src="public/components/controllers/profile.js"></script>
   <script src="public/components/controllers/toolbar.js"></script>
@@ -37,6 +37,7 @@
   <script src="public/components/controllers/home1.js"></script>
   <script src="public/services/questions.js"></script>
   <script src="public/services/userService.js"></script>
+  <script src="public/services/stackService.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
   <script src="public/services/chatService.js"></script>
   <script src="public/components/controllers/chatPage.js"></script>
