(ADD) Full socket functionality

--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
   <script src="public/components/chat/messageList/messageList.ctrl.js"></script>
   <script src="public/components/chat/participantList/participantList.js"></script>
   <script src="public/components/chat/participantList/participantList.ctrl.js"></script>
+  <script src="public/components/chat/participantList/selfFilter.js"></script>
   <script src="public/components/chat/state/chat.ctrl.js"></script>
   <script src="public/components/chat/state/chat.js"></script>
   <script src="public/services/questions.js"></script>
   <script src="public/services/userService.js"></script>
   <script src="public/services/socket.service.js"></script>
   <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>-->
-  <script src="public/utils/custom-socket-wrapper.js"></script>
+  <script src="node_modules/angular-socket-io/socket.min.js"></script>
   <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
   <script src="public/services/chatService.js"></script>
   <script src="public/components/controllers/chatPage.js"></script>
