(ADD) Adds some css to make chat look nicer

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <script src="public/components/controllers/profilePage.js"></script>
   <script src="public/components/controllers/home.js"></script>
   <script src="public/components/controllers/home1.js"></script>
+  <script src="public/components/chat/message/fromNowFilter.js"></script>
   <script src="public/components/chat/message/message.js"></script>
   <script src="public/components/chat/message/message.ctrl.js"></script>
   <script src="public/components/chat/messageForm/messageForm.ctrl.js"></script>
@@ -46,7 +47,7 @@
   <script src="public/services/questions.js"></script>
   <script src="public/services/userService.js"></script>
   <script src="public/services/socket.service.js"></script>
-  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>-->
+  <script src="node_modules/moment/min/moment.min.js"></script>
   <script src="node_modules/angular-socket-io/socket.min.js"></script>
   <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
   <script src="public/services/chatService.js"></script>
